========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-04-29

  - Implemented polymorphic NEG() function in the SQL shell, which works on
    instances of Decimal, Amount, Position, Inventory.

  - Changed the SQL shell's operators to dispatch to Python's default operator
    selection instead of coercing to Decimal instances.


2018-04-28

  - Added QUARTER() function to the SQL shell.
    (See https://groups.google.com/d/msg/beancount/fTlSnQRPayo/1yN8zd76AAAJ.)

  - Updated version of flex on Ubuntu (2.6.1) generates warnings. Fixed a few.
    But Beancount now fails on account names with a dash inthyem; added a test
    for those. (The lexer is not the issue; I suspect a bison update from 4/17.)


2018-04-18

  - Fixed #157: Building a price map with zero prices should not fail,
    especially when done accidentally.

  - Fixed #264: Converted zip compression in bake from using an external zip
    tool to using the 'zipfile' module packaged with Python. I'm doing this to
    fix the CI build as well.


2018-04-17

  - Fixed #265: Refined the timezone specification of the price sources. In
    doing this, I documented it in the beancount.prices.source module and now
    pass in a timezone-aware datetime instance instead of a date, and the source
    is now required to also require a timezone-aware datetime instance. I fixed
    all the tests, and added a utility to simulate running them from different
    timezones.

  - Implemented multi-file support for bean-doctor context command. Use it like
    this:

      bean-doctor context <toplevel.beancount> <file.beancount>:<lineno>

    The previous syntax is still supported; like this:

      bean-doctor context <toplevel.beancount> <lineno>


2018-04-05

  - Since I added a dependency on 'requests', forgot to add to checkdeps. Done.


2018-04-04

  - Handle error on an invalid implementation of a price source (e.g., in this